fix: inputs on mobile

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -66,7 +66,7 @@ body {
 
 .output {
   &__container {
-    flex: 1 1 100px;
+    flex: 1 0 350px;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -84,6 +84,10 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 5px;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__label {
